target/generated-sources/antlr4/com.enmer.compi2/DecafOLC2Parser.java
// Generated from com.enmer.compi2/DecafOLC2.g4 by ANTLR 4.13.2
package com.enmer.compi2;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class DecafOLC2Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, INT_LIT=54, FLOAT_LIT=55, CHAR_LIT=56, STRING_LIT=57, IDENT=58, 
		WS=59, LINE_COMMENT=60, COMMENT=61, PLUS=62, MINUS=63, STAR=64, DIV=65, 
		MOD=66;
	public static final int
		RULE_programa = 0, RULE_claseDecl = 1, RULE_miembroClase = 2, RULE_campoDecl = 3, 
		RULE_listaVars = 4, RULE_varInit = 5, RULE_constructorDecl = 6, RULE_metodoDecl = 7, 
		RULE_params = 8, RULE_param = 9, RULE_tipo = 10, RULE_tipoBase = 11, RULE_dims = 12, 
		RULE_modificador = 13, RULE_bloque = 14, RULE_sentencia = 15, RULE_ifStmt = 16, 
		RULE_whileStmt = 17, RULE_doWhileStmt = 18, RULE_forStmt = 19, RULE_forInit = 20, 
		RULE_forUpdate = 21, RULE_switchStmt = 22, RULE_switchItem = 23, RULE_switchLabel = 24, 
		RULE_expr = 25, RULE_asignacionExpr = 26, RULE_opAsig = 27, RULE_orExpr = 28, 
		RULE_andExpr = 29, RULE_igualdadExpr = 30, RULE_relExpr = 31, RULE_aditivoExpr = 32, 
		RULE_multExpr = 33, RULE_unaryExpr = 34, RULE_postfixExpr = 35, RULE_postfixOp = 36, 
		RULE_primaria = 37, RULE_args = 38, RULE_literal = 39;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "claseDecl", "miembroClase", "campoDecl", "listaVars", "varInit", 
			"constructorDecl", "metodoDecl", "params", "param", "tipo", "tipoBase", 
			"dims", "modificador", "bloque", "sentencia", "ifStmt", "whileStmt", 
			"doWhileStmt", "forStmt", "forInit", "forUpdate", "switchStmt", "switchItem", 
			"switchLabel", "expr", "asignacionExpr", "opAsig", "orExpr", "andExpr", 
			"igualdadExpr", "relExpr", "aditivoExpr", "multExpr", "unaryExpr", "postfixExpr", 
			"postfixOp", "primaria", "args", "literal"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'class'", "'extends'", "'{'", "'}'", "';'", "'var'", "'='", "','", 
			"'('", "')'", "'void'", "'int'", "'float'", "'char'", "'boolean'", "'String'", 
			"'['", "']'", "'public'", "'private'", "'protected'", "'final'", "'break'", 
			"'continue'", "'return'", "'if'", "'else'", "'while'", "'do'", "'for'", 
			"'switch'", "'case'", "':'", "'default'", "'+='", "'-='", "'*='", "'/='", 
			"'%='", "'||'", "'&&'", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", 
			"'!'", "'.'", "'new'", "'true'", "'false'", "'null'", null, null, null, 
			null, null, null, null, null, "'+'", "'-'", "'*'", "'/'", "'%'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "INT_LIT", "FLOAT_LIT", "CHAR_LIT", 
			"STRING_LIT", "IDENT", "WS", "LINE_COMMENT", "COMMENT", "PLUS", "MINUS", 
			"STAR", "DIV", "MOD"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "DecafOLC2.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DecafOLC2Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(DecafOLC2Parser.EOF, 0); }
		public List<ClaseDeclContext> claseDecl() {
			return getRuleContexts(ClaseDeclContext.class);
		}
		public ClaseDeclContext claseDecl(int i) {
			return getRuleContext(ClaseDeclContext.class,i);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DecafOLC2Listener ) ((DecafOLC2Listener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DecafOLC2Listener ) ((DecafOLC2Listener)listener).exitPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DecafOLC2Visitor ) return ((DecafOLC2Visitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(80);
				claseDecl();
				}
				}
				setState(83); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__0 );
			setState(85);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClaseDeclContext extends ParserRuleContext {
		public List<TerminalNode> IDENT() { return getTokens(DecafOLC2Parser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(DecafOLC2Parser.IDENT, i);
		}
		public List<MiembroClaseContext> miembroClase() {
			return getRuleContexts(MiembroClaseContext.class);
		}
		public MiembroClaseContext miembroClase(int i) {
			return getRuleContext(MiembroClaseContext.class,i);
		}
		public ClaseDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_claseDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DecafOLC2Listener ) ((DecafOLC2Listener)listener).enterClaseDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DecafOLC2Listener ) ((DecafOLC2Listener)listener).exitClaseDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DecafOLC2Visitor ) return ((DecafOLC2Visitor<? extends T>)visitor).visitClaseDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClaseDeclContext claseDecl() throws RecognitionException {
		ClaseDeclContext _localctx = new ClaseDeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_claseDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			match(T__0);
			setState(88);
			match(IDENT);
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(89);
				match(T__1);
				setState(90);
				match(IDENT);
				}
			}

			setState(93);
			match(T__2);
			setState(97);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 288230376159705152L) != 0)) {
				{
				{
				setState(94);
				miembroClase();
				}
				}
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(100);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MiembroClaseContext extends ParserRuleContext {
		public CampoDeclContext campoDecl() {
			return getRuleContext(CampoDeclContext.class,0);
		}
		public ConstructorDeclContext constructorDecl() {
			return getRuleContext(ConstructorDeclContext.class,0);
		}
		public MetodoDeclContext metodoDecl() {
			return getRuleContext(MetodoDeclContext.class,0);
		}
		public MiembroClaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_miembroClase; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DecafOLC2Listener ) ((DecafOLC2Listener)listener).enterMiembroClase(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DecafOLC2Listener ) ((DecafOLC2Listener)listener).exitMiembroClase(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DecafOLC2Visitor ) return ((DecafOLC2Visitor<? extends T>)visitor).visitMiembroClase(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MiembroClaseContext miembroClase() throws RecognitionException {
		MiembroClaseContext _localctx = new MiembroClaseContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_miembroClase);
		try {
			setState(105);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(102);
				campoDecl();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(103);
				constructorDecl();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(104);
				metodoDecl();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CampoDeclContext extends ParserRuleContext {
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public ListaVarsContext listaVars() {
			return getRuleContext(ListaVarsContext.class,0);
		}
		public List<ModificadorContext> modificador() {
			return getRuleContexts(ModificadorContext.class);
		}
		public ModificadorContext modificador(int i) {
			return getRuleContext(ModificadorContext.class,i);
		}
		public TerminalNode IDENT() { return getToken(DecafOLC2Parser.IDENT, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public CampoDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_campoDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DecafOLC2Listener ) ((DecafOLC2Listener)listener).enterCampoDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DecafOLC2Listener ) ((DecafOLC2Listener)listener).exitCampoDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DecafOLC2Visitor ) return ((DecafOLC2Visitor<? extends T>)visitor).visitCampoDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CampoDeclContext campoDecl() throws RecognitionException {
		CampoDeclContext _localctx = new CampoDeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_campoDecl);
		int _la;
		try {
			setState(130);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(110);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 7864320L) != 0)) {
					{
					{
					setState(107);
					modificador();
					}
					}
					setState(112);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(113);
				tipo();
				setState(114);
				listaVars();
				setState(115);
				match(T__4);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(120);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 7864320L) != 0)) {
					{
					{
					setState(117);
					modificador();
					}
					}
					setState(122);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(123);
				match(T__5);
				setState(124);
				match(IDENT);
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__6) {
					{
					setState(125);
					match(T__6);
					setState(126);
					expr();
					}
				}

				setState(129);
				match(T__4);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ListaVarsContext extends ParserRuleContext {
		public List<VarInitContext> varInit() {
			return getRuleContexts(VarInitContext.class);
		}
		public VarInitContext varInit(int i) {
			return getRuleContext(VarInitContext.class,i);
		}
		public ListaVarsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listaVars; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DecafOLC2Listener ) ((DecafOLC2Listener)listener).enterListaVars(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DecafOLC2Listener ) ((DecafOLC2Listener)listener).exitListaVars(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DecafOLC2Visitor ) return ((DecafOLC2Visitor<? extends T>)visitor).visitListaVars(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListaVarsContext listaVars() throws RecognitionException {
		ListaVarsContext _localctx = new ListaVarsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_listaVars);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			varInit();
			setState(137);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__7) {
				{
				{
				setState(133);
				match(T__7);
				setState(134);
				varInit();
				}
				}
				setState(139);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VarInitContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(DecafOLC2Parser.IDENT, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public VarInitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varInit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DecafOLC2Listener ) ((DecafOLC2Listener)listener).enterVarInit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DecafOLC2Listener ) ((DecafOLC2Listener)listener).exitVarInit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DecafOLC2Visitor ) return ((DecafOLC2Visitor<? extends T>)visitor).visitVarInit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarInitContext varInit() throws RecognitionException {
		VarInitContext _localctx = new VarInitContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_varInit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			match(IDENT);
			setState(143);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__6) {
				{
				setState(141);
				match(T__6);
				setState(142);
				expr();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConstructorDeclContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(DecafOLC2Parser.IDENT, 0); }
		public BloqueContext bloque() {
			return getRuleContext(BloqueContext.class,0);
		}
		public List<ModificadorContext> modificador() {
			return getRuleContexts(ModificadorContext.class);
		}
		public ModificadorContext modificador(int i) {
			return getRuleContext(ModificadorContext.class,i);
		}
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public ConstructorDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constructorDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DecafOLC2Listener ) ((DecafOLC2Listener)listener).enterConstructorDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DecafOLC2Listener ) ((DecafOLC2Listener)listener).exitConstructorDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DecafOLC2Visitor ) return ((DecafOLC2Visitor<? extends T>)visitor).visitConstructorDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstructorDeclContext constructorDecl() throws RecognitionException {
		ConstructorDeclContext _localctx = new ConstructorDeclContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_constructorDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 7864320L) != 0)) {
				{
				{
				setState(145);
				modificador();
				}
				}
				setState(150);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(151);
			match(IDENT);
			setState(152);
			match(T__8);
			setState(154);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 288230376151838720L) != 0)) {
				{
				setState(153);
				params();
				}
			}

			setState(156);
			match(T__9);
			setState(157);
			bloque();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MetodoDeclContext extends ParserRuleContext {
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(DecafOLC2Parser.IDENT, 0); }
		public BloqueContext bloque() {
			return getRuleContext(BloqueContext.class,0);
		}
		public List<ModificadorContext> modificador() {
			return getRuleContexts(ModificadorContext.class);
		}
		public ModificadorContext modificador(int i) {
			return getRuleContext(ModificadorContext.class,i);
		}
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public MetodoDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_metodoDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DecafOLC2Listener ) ((DecafOLC2Listener)listener).enterMetodoDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DecafOLC2Listener ) ((DecafOLC2Listener)listener).exitMetodoDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DecafOLC2Visitor ) return ((DecafOLC2Visitor<? extends T>)visitor).visitMetodoDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MetodoDeclContext metodoDecl() throws RecognitionException {
		MetodoDeclContext _localctx = new MetodoDeclContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_metodoDecl);
		int _la;
		try {
			setState(188);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,16,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(162);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 7864320L) != 0)) {
					{
					{
					setState(159);
					modificador();
					}
					}
					setState(164);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(165);
				tipo();
				setState(166);
				match(IDENT);
				setState(167);
				match(T__8);
				setState(169);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 288230376151838720L) != 0)) {
					{
					setState(168);
					params();
					}
				}

				setState(171);
				match(T__9);
				setState(172);
				bloque();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(177);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 7864320L) != 0)) {
					{
					{
					setState(174);
					modificador();
					}
					}
					setState(179);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(180);
				match(T__10);
				setState(181);
				match(IDENT);
				setState(182);
				match(T__8);
				setState(184);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 288230376151838720L) != 0)) {
					{
					setState(183);
					params();
					}
				}

				setState(186);
				match(T__9);
				setState(187);
				bloque();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParamsContext extends ParserRuleContext {
		public List<ParamContext> param() {
			return getRuleContexts(ParamContext.class);
		}
		public ParamContext param(int i) {
			return getRuleContext(ParamContext.class,i);
		}
		public ParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_params; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DecafOLC2Listener ) ((DecafOLC2Listener)listener).enterParams(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DecafOLC2Listener ) ((DecafOLC2Listener)listener).exitParams(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DecafOLC2Visitor ) return ((DecafOLC2Visitor<? extends T>)visitor).visitParams(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamsContext params() throws RecognitionException {
		ParamsContext _localctx = new ParamsContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_params);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(190);
			param();
			setState(195);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__7) {
				{
				{
				setState(191);
				match(T__7);
				setState(192);
				param();
				}
				}
				setState(197);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParamContext extends ParserRuleContext {
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(DecafOLC2Parser.IDENT, 0); }
		public ParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DecafOLC2Listener ) ((DecafOLC2Listener)listener).enterParam(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DecafOLC2Listener ) ((DecafOLC2Listener)listener).exitParam(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DecafOLC2Visitor ) return ((DecafOLC2Visitor<? extends T>)visitor).visitParam(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamContext param() throws RecognitionException {
		ParamContext _localctx = new ParamContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_param);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(198);
			tipo();
			setState(199);
			match(IDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
